--- a/myTalks.html
+++ b/myTalks.html
@@ -62,6 +62,7 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li><a href="https://maaretp.com/silver-jubilee">maaretp Silver Jubilee</a>, Nov 23-26th, 2022, Online</li>
     <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online</li>
     <li>Customer Event, Dec 8th, 2022
       <br>TALK: Let's Do a Thing and Call It Foo</li>
@@ -76,11 +77,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
   <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
-      Alma Talent, 12-13.9.2022, Online. 
-        </ul>
-    https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/
-  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
-  Alma Talent, 8-9.2.2023, Helsinki, Finland. 
+  Alma Talent, 8-9.2.2023, Helsinki, Finland.
     </ul>
 <p><p>
 
@@ -131,6 +128,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (12-13.9.2022) <br />
 &nbsp; Trainer for a customer organization (2-days), Helsinki, Finland (19-20.4.2022) <br />
 &nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (26-27.5.2021) <br />
 &nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (9-10.2.2021) <br />
