--- a/myTalks.html
+++ b/myTalks.html
@@ -176,7 +176,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Social Software Testing Approaches, 1 day tutorial</i> <br />
-&nbsp; Trainer at Conference, Sept 22nd, Helsinki, Finland.<br />
+&nbsp; Trainer at Conference, (22.9.2022) Helsinki, Finland.<br />
 <br />
 
 <i>Panel on Breaking the Bias in Software Testing</i><br />
