Silver Jubilee Sessions

--- a/myTalks.html
+++ b/myTalks.html
@@ -145,8 +145,28 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
 <br />
 
+<i>Workshop on Sprint Test Planning (Silver Jubilee ed.)</i><br />
+&nbsp; Workshop Facilitator at maaretp Silver Jubilee (24.10.2022), Online<br />
+<br />
+
+<i>Workshop on Exploratory Unit Testing (Silver Jubilee ed.)</i><br />
+&nbsp; Workshop Facilitator at maaretp Silver Jubilee (26.10.2022), Online<br />
+<br />
+
+<i>Workshop on Test Automationist's Gambit (Silver Jubilee ed.)</i><br />
+&nbsp; Workshop Facilitator at maaretp Silver Jubilee (25.10.2022), Online<br />
+<br />
+
+<i>Workshop on Test Coverage (Silver Jubilee ed.)</i><br />
+&nbsp; Workshop Facilitator at maaretp Silver Jubilee (26.10.2022), Online<br />
+<br />
+
+<i>Pivotal Moments, Pivotal Experiences - a Career Review</i><br />
+&nbsp; Speaker at maaretp Silver Jubilee (27.10.2022), Online<br />
+<br />
+
 <i>Ensemble Testing on Selenium 4 (from geolocation to grid), co-presented Manoj Kumar</i><br />
-&nbsp; Workshop Facilitator at Selenium Conference India/Virtual (29-30.7.2022), Soltau, Germany<br />
+&nbsp; Workshop Facilitator at Selenium Conference India/Virtual (29-30.7.2022), Online<br />
 <br />
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
