--- a/myTalks.html
+++ b/myTalks.html
@@ -62,12 +62,18 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://maaretp.com/silver-jubilee">maaretp Silver Jubilee</a>, Nov 23-26th, 2022, Online</li>
-    <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online</li>
+    <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online
+      <br>TALK: Testing Changes, Do You? Tips for Meaningful Testing (Testaus muuttuu, muututko sinä? Merkityksellisen testauksen vinkkikokoelma)
+    </li>
+    <li>Customer Event, Nov 10th, 2022
+      <br>TALK: A Practitioner's Guide to Contemporary Exploratory Testing
+    </li>
     <li>Customer Event, Dec 8th, 2022
       <br>TALK: Let's Do a Thing and Call It Foo</li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
       <br>KEYNOTE: Targeting Errors of Omission </li>
+      <li>FooConf, Feb 28th, 2023, Helsinki, Finland
+        <br>TALK: Let's Do a Thing and Call It Foo</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -90,13 +96,19 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
 <br />
 
+<i>Testing Changes, Do You? Tips for Meaningful</i><br />
+&nbsp; Speaker at Prove Webinar, Nov 16th 2022, Online<br />
+<br />
+
 <i>Let's Do a Thing and Call It Foo</i> <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/">[Article/Video]</a><br />
+&nbsp; Speaker at FooConf (28.2.2023), Helsinki, Finland</a><br />
 &nbsp; Speaker at Customer Event (8.12.2022), Helsinki, Finland</a><br />
 &nbsp; Speaker at Supermetrics Tech Meetup, 17.8.2022, Helsinki, Finland <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s">[video]</a><br />
 &nbsp; Keynote Speaker at Testμ Conference, 23.8.2022, Online<br />
 <br />
 
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
+&nbsp; Speaker at Customer Event, 10.11.2022, Online<br />
 &nbsp; Keynote Speaker at Axiom Summit Conference, 14.5.2022, Online<br />
 <br />
 
