--- a/myTalks.html
+++ b/myTalks.html
@@ -62,22 +62,21 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online
-      <br>TALK: Testing Changes, Do You? Tips for Meaningful Testing (Testaus muuttuu, muututko sinä? Merkityksellisen testauksen vinkkikokoelma)
-    </li>
-    <li>Customer Event, Nov 10th, 2022
-      <br>TALK: A Practitioner's Guide to Contemporary Exploratory Testing
-    </li>
     <li>Customer Event, Dec 8th, 2022
       <br>TALK: Let's Do a Thing and Call It Foo</li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
       <br>KEYNOTE: Targeting Errors of Omission </li>
-      <li>FooConf, Feb 28th, 2023, Helsinki, Finland
+    <li>FooConf, Feb 28th, 2023, Helsinki, Finland
         <br>TALK: Let's Do a Thing and Call It Foo</li>
+    <li>EuroSTAR Conference, June 11-16th, 2023
+      <br>KEYNOTE: Whose Test Is It Anyway?
+      <br>WORKSHOP: Social Software Testing Approaches
+    </li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
-happy to appear in podcasts, webinars, remote conferences and anything that requires no travel.<p>
+happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. 
+Traveling on special occasions since Autumn 2022 but still prefer not to.<p>
 
 <img src="img/Talks2022.png" alt="statistics of talks from Maaret" width="350">
 
@@ -91,6 +90,10 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
+
+<i>Whose Test Is It Anyway? <a href="https://conference.eurostarsoftwaretesting.com/event/2023/whose-test-is-it-anyway/">[Session]</a></i><br />
+&nbsp; Keynote Speaker at EuroSTAR Testing Conference, June 15th 2022, Antwerp, Belgium<br />
+<br />
 
 <i>Targeting Errors of Omission</i><br />
 &nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
@@ -208,8 +211,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at Webinar (19.8.2022), Online<br />
 <br />
 
+<i>Social Software Testing Approaches, 1/2 day tutorial</i> <br />
+&nbsp; Trainer at EuroSTAR Testing Conference, (12.6.2023) Helsinki, Finland.<br />
+<br />
+
 <i>Social Software Testing Approaches, 1 day tutorial</i> <br />
-&nbsp; Trainer at Conference, (22.9.2022) Helsinki, Finland.<br />
+&nbsp; Trainer at Testing Assembly, (22.9.2022) Helsinki, Finland.<br />
 <br />
 
 <i>Panel on Breaking the Bias in Software Testing</i><br />
