--- a/myArticles.html
+++ b/myArticles.html
@@ -49,6 +49,7 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul>
+    <li>Quality Bits Podcast, <a href="https://www.buzzsprout.com/2037134/11705424">Bandwidth to Grow: Supporting Growth and Change with Maaret Pyhäjärvi</a>, November 28th, 2022</li>
     <li>Quality Sense Podcast, <a href="https://abstracta.us/blog/podcast/maaret-pyhajarvi-exploratory-testing/">Exploratory Testing</a>, September 30th, 2022</li>
     <li>Koodarikuiskaaja, <a href="https://koodarikuiskaaja.fi/podcast/yhteisoohjelmoinnissa-tehdaan-yllattavia-asioita/">Yhteisohjelmoinnissa tehdään yllättäviä asioita</a>, August 28th, 2022</li>
     <li>The Mob Mentality Show, <a href="https://www.youtube.com/watch?v=AjJF-0r5HMc">Ensemble Teaching, Exploratory Testing, and Product Development with Maaret Pyhäjärvi, May 2022</a></li>
