Updates list of talks

--- a/myTalks.html
+++ b/myTalks.html
@@ -62,13 +62,13 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Customer Event, Dec 8th, 2022
-      <br>TALK: Let's Do a Thing and Call It Foo</li>
-    <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
-      <br>KEYNOTE: Targeting Errors of Omission </li>
+    <li>Test Guru Summit, Feb 9th, 2023, Helsinki, Finland
+      <br>TALK: Time Management for Testers</li>
     <li>FooConf, Feb 28th, 2023, Helsinki, Finland
         <br>TALK: Let's Do a Thing and Call It Foo</li>
-    <li>EuroSTAR Conference, June 11-16th, 2023
+    <li>Customer Event, March 17th, 2023, Online
+      <br>Onko valmista ilman testausta?  (Is there done without testing?)</li>
+    <li>EuroSTAR Conference, June 11-16th, 2023, Antwerp, Belgium
       <br>KEYNOTE: Whose Test Is It Anyway?
       <br>WORKSHOP: Social Software Testing Approaches
     </li>
