Update ICT influencers list

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <h4>Awards</h4>
 <img class="awards" src="img/eurostar-testing-excellence-award.jpg" alt="EuroSTAR Testing Excellence Award 2020">
 <img class="awards" src="img/agiletestingdays-miatpp-award.jpg" alt="Agile Testing Days MIATPP Award 2016">
-<img class="awards" src="img/tivi-ict-influencers.jpg" alt="ICT 100 influencers list 2019 and 2020">
+<img class="awards" src="img/tivi-ict-influencers.png" alt="ICT 100 influencers list 2019, 2020, 2021 and 2022">
 </div>
 
 <div class="book-container">
