Fixing talks listing year

--- a/myTalks.html
+++ b/myTalks.html
@@ -212,7 +212,7 @@ Traveling on special occasions since Autumn 2022 but still prefer not to.<p>
 <br />
 
 <i>Social Software Testing Approaches, 1/2 day tutorial</i> <br />
-&nbsp; Trainer at EuroSTAR Testing Conference, (12.6.2023) Helsinki, Finland.<br />
+&nbsp; Trainer at EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium<br />
 <br />
 
 <i>Social Software Testing Approaches, 1 day tutorial</i> <br />
