--- a/myTalks.html
+++ b/myTalks.html
@@ -186,7 +186,7 @@ Traveling on special occasions since Autumn 2022 but still prefer not to.<p>
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
 &nbsp; Keynote Speaker at Testing Assembly, 22.9.2022, Helsinki, Finland<br />
-&nbsp; Speaker at Customer event, 14.6.2022, Helsinki, Finland<br />
+&nbsp; Speaker at Customer event, 14.6.2022, Online<br />
 <br />
 
 <i>Patterns to Whole Team Test Automation Transformation</i>
