--- a/myTalks.html
+++ b/myTalks.html
@@ -67,7 +67,7 @@
     <li>FooConf, Feb 28th, 2023, Helsinki, Finland
         <br>TALK: Let's Do a Thing and Call It Foo</li>
     <li>Customer Event, March 17th, 2023, Online
-      <br>Onko valmista ilman testausta?  (Is there done without testing?)</li>
+      <br>TALK: Onko valmista ilman testausta?  (Is there done without testing?)</li>
     <li>EuroSTAR Conference, June 11-16th, 2023, Antwerp, Belgium
       <br>KEYNOTE: Whose Test Is It Anyway?
       <br>WORKSHOP: Social Software Testing Approaches
