--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 <a href="https://techvoices.org"><img class="causes" src="img/techvoices.jpg" alt="Techvoices - diversity in conference speaking"></a>
 <a href="https://awesometesters.tech"><img class="causes" src="img/awesometesters.jpg" alt="Awesome Testers"></a>
 <a href="https://www.facebook.com/groups/ohjelmistotestausry"><img class="causes" src="img/ohjelmistotestausry.png" alt="Software Testing Finland ry, non-profit"></a>
+<a href="https://tivia.fi"><img class="causes" src="img/tivia.jpg alt="TIVIA ry"></a>
 <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi"><img class="causes" src="img/mimmitkoodaa.png" alt="Mimmit Koodaa"></a>
 </div>
 
