New site starter continued

--- a/newsite/index.html
+++ b/newsite/index.html
@@ -1,11 +1,74 @@
-<html>
+<html html>
+<html dir="ltr" lang="en-US"></html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>My New Site</title>
-
-
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>maaretp - Maaret Pyhäjärvi</title>
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
+    <script src="https://kit.fontawesome.com/d13ab97070.js" crossorigin="anonymous"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta property="og:title" content="Maaret Pyhäjärvi">
+    <meta property="og:url" content="https://maaretp.com/">
+    <meta property="og:description" name="description" content="">
+    <meta property="og:site_name" content="maaretp.com">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta name="twitter:creator" content="@maaretp">
+    <meta name="author" content="Maaret Pyhäjärvi">
+    <link rel="shortcut icon" type="image/jpg" href="images/minilogo.jpg"/>
 </head>
+
 <body>
+<div class="hero">
+    <nav>
+        <h2 class="logo">maaret<span>p</span></h2>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contents</a></li>
+            <li><a href="#">Causes</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="mailto:maaret+website@iki.fi" class="btn"><button>Send email</button></a>
+    </nav>
+
+    <div class="me">
+        <h1>Maaret Pyhäjärvi</h1>
+        <h3>Practitioner. Change Agent. Tester of products and organizations.</h3>
+        <h3>Exploratory Tester. (Polyglot) Programmer. </h3>
+        <h3>Speaker. Author. Mentor. Conference Designer. <span>She/Her.</span></h3>
+    <div class="social">
+        <a href="mailto:maaret+website@iki.fi"><i class="fas fa-envelope-square"></i></a>
+        <a rel="me" href="https://mas.to/@maaretp" target="_blank" rel="noopener noreferrer me" title="Mastodon profile"><i class="fab fa-mastodon"></i></a>
+        <a href="https://fi.linkedin.com/in/maaret" target="_blank" rel="noopener noreferrer me" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+        <a href="https://facebook.com/MaaretPy/" target="_blank" rel="noopener noreferrer me" title="Facebook page"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://twitter.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Twitter profile"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.polywork.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Polywork profile"><i class="fas fa-bookmark"></i></a>
+        <a href="https://anchor.fm/exploratory-testing" target="_blank" rel="noopener noreferrer me" title="My Podcast"><i class="fas fa-podcast"></i></a>
+        <a href="https://visible-quality.blogspot.fi" target="_blank" rel="noopener noreferrer me" title="My Blog"><i class="fab fa-blogger"></i></a>
+        <a href="https://dev.to/maaretp" target="_blank" rel="noopener noreferrer me" title="Talks and Trainings Turned Articles"><i class="fab fa-dev"></i></a>
+        <a href="https://www.slideshare.net/maaretp" target="_blank" rel="noopener noreferrer me" title="My slides on slideshare"><i class="fab fa-slideshare"></i></a>
+        <a href="https://github.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Me on Github"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank" rel="noopener noreferrer me" title="YouTube channel"><i class="fab fa-youtube-square"></i></a>
+    </div>
+        <div class="support">
+            <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#02A4D3', 'F1F61M6QO');kofiwidget2.draw();</script>
+        </div>
+    </div>
+</div>
+
+<section class="about">
+
+</section>
+
+<section class="contents">
+</section>
+
+<section class="causes">
+</section>
+
+<section class="contact">
+</section>
+
 <h1>My New Site</h1>
 <p>My new site is up and running!</p>
 </body>
