--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html html>
 <html dir="ltr" lang="en-US"></html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>maaretp - Maaret Pyhäjärvi</title>
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
     <script src="https://kit.fontawesome.com/d13ab97070.js" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta property="og:title" content="Maaret Pyhäjärvi">
