--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="preview">
                 <p>I teach many courses that I am happy to deliver, or tailor for specific needs. I teach hands-on, doing the work.</p>
                 <p style="text-align:center;">
-                    <a class="button" href="./teach/">Read more...</a>
+                    <a class="button" href="https://maaretp.com/teach/">Read more...</a>
                 </p>
             </div>
         </div>
