tweaking teaching part visible

--- a/contents.html
+++ b/contents.html
@@ -883,6 +883,78 @@
 
       <div class="contents2-title" id="teach">Training</div>
 
+      <div class="contents2-title">Topics</div>
+
+I share as a practitioner with a wide range of interest in topics:
+<ul>
+  <li class="bullet"> Software Testing - Exploratory Testing and Test Automation</li>
+  <li class="bullet"> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product develoment and IT projects)</li>
+  <li class="bullet"> Social Software Testing Approaches (ensemble and pair testing)</li>
+  <li class="bullet"> Social Software Development Approaches (ensemble and pair programming)</li>
+  <li class="bullet"> Teaching and Mentoring Testers and Programmers</li>
+  <li class="bullet"> Learning and Experimentation</li>
+  <li class="bullet"> Modern Agile </li>
+  <li class="bullet"> Developer Productivity, Metrics and Management </li>
+  <li class="bullet"> Conference Speaking </li>
+</ul>
+
+<div class="contents2-title"> Minimalistic Speaker Rider </div>
+
+Since December 2019, I am on a traveling break as per requested by my teenage kids.
+I'm happy to share my experiences in online conferences and deliver online workshops.<p>
+I have a full-time job at Vaisala as a principal test engineer and I teach limited amount
+of sessions on the side for my side company maaretp.<p>
+
+I invoice 2500 euros for a full day training, and 1500 euros (+ VAT) for a conference (keynote) session.
+I often waive my fees on request as long as this is also something all other speakers are doing.
+I don't pay to speak - that is - if there is travel involved, I always expect those paid.<p>
+I don't participate in calls for proposals and consider invitation necessary. In encourage conference
+organizers to consider all my talks on this site as proposals you can consider,
+and I would be happy to deliver if I can make the schedule work. <p>
+
+  <div class="contents2-title"> My Sessions </div>
+
+I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is
+works great for remote learning. My workshops are single-purpose sessions that
+stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
+
+My free public sessions are posted under <a class="blacktext" href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
+
+<div class="contents2-title"> Brochures </div>
+
+<a class="blacktext" href="https://docs.google.com/document/d/1CJBUTPd7MKY95GayHsKJAm5mNLfd7fIfj5kASowOOZk/edit?usp=sharing">Bio</a>
+| <a class="blacktext" href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a>
+
+<div class="contents2-title"> Courses </div>
+
+<a href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a><br>
+<a href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a> <br>
+<a href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
+<a href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a><br>
+<a href="https://docs.google.com/document/d/18SEGRpCm2fB-lQpIlm7m1l2r96mE1foGypBHh-FBm1M/edit?usp=sharing">Diversifying Test Approaches using Constraints (1 day)</a><br>
+<a href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a><br>
+Test Automation Sampler (1 day)<br>
+Contemporary Test Management (1 day)<br>
+Exploratory Testing Applied (2 days)<br>
+Software and System Testing Foundations (1 day)<br>
+Test Design (2 days) | <a href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a><br>
+Test Activity Sampler (1 day)<br>
+
+<div class="contents2-title"> Workshops </div>
+
+<a href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a><br>
+<a href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a><br>
+<a href="https://docs.google.com/document/d/1tjiMGzoDd-pfhMp2ZzrI-q4zHYSxvaHc7Wg_2oxeMfo/edit?usp=sharing">Exploratory Testing with a Constraint: Self-Management (99 minutes)</a><br>
+<a href="https://docs.google.com/document/d/1o5QnEit5E-BfEyZptWGoz214an2dR14eCW2Qi64v3fo/edit?usp=sharing">Test a Text Field, Test a Button (99 minutes)</a><br>
+Incremental Test Planning (99 minutes)<br>
+Test Coverages: Code, Requirements, Risks (99 minutes)<br>
+Exploratory Testing an API (99 minutes)<br>
+Mock the Response to Target Testing (99 minutes)<br>
+Ensemble Testing Roleplay (99 minutes)<br>
+<a href="https://docs.google.com/document/d/1pufTLEjpsC-6WX_VH1L5PHK1Utusk4uolc8dR9iZnf8/edit?usp=sharing">Contemporary Exploratory Testing Ask Anyone Anything (99 minutes)</a><br>
+Visual Test Retrospective (99 minutes)<br>
+Test Strategy Visualization (99 minutes)<br>
+Becoming Public Speaker (99 minutes)<br>
 
     </section>
 
