--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta name="twitter:creator" content="@maaretp">
     <meta name="author" content="Maaret Pyhäjärvi">
-    <link rel="shortcut icon" type="image/jpg" href="images/minilogo.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
 </head>
 
 <body>
