I still have not learned that IDEs edit pairs of tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html html>
+<!DOCTYPE html>
 <html dir="ltr" lang="en-US"></html>
 <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
