Update talk page in progress

--- a/contents.html
+++ b/contents.html
@@ -33,7 +33,7 @@
       &nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
       <br />
       
-      <i>Testing Changes, Do You? Tips for Meaningful</i><br />
+      <i>Testaus muuttuu, muututko sinä? (Testing Changes, Do You?)</i><br />
       &nbsp; Speaker at Prove Webinar, Nov 16th 2022, Online<br />
       <br />
       
