--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta property="og:title" content="Maaret Pyhäjärvi">
     <meta property="og:url" content="https://maaretp.com/">
-    <meta property="og:description" name="description" content="">
+    <meta property="og:description" name="description" content="maaretp is a Finnish testing specialist and this is her page.">
     <meta property="og:site_name" content="maaretp.com">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta name="twitter:creator" content="@maaretp">
     <meta name="author" content="Maaret Pyhäjärvi">
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="./images/favicon.jpg"/>
 </head>
 
 <body>
@@ -152,7 +152,7 @@
             <div class="preview">
                 <p>I have spoken in 28 countries, delivering 39 keynotes and 509 talks by end of 2022 in total. </p>
                 <p style="text-align:center;">
-                    <a class="button" href="contents.html#talk">Read more...</a>
+                    <a class="button" href="./past_talks/index.html">Read more...</a>
                 </p>
             </div>
         </div>
