--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -27,7 +27,7 @@
         <div class="card2">
         <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 509 sessions and 39 keynotes.</div>
             <img src="../images/Talks2022.png" alt="statistics of talks from Maaret">
-        <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article available on some of the talks.</div>
+        <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article, <i class="fas fa-bars"></i>abstract available on some of the talks.</div>
         </div>
 
         <div class="card2">
@@ -61,6 +61,7 @@
             <div class="talktype">TALK</div> <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">Customer Event, December 8th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">FooConf, February 1st 2023, Helsinki, Finland</div>
+            <a href="https://www.slideshare.net/maaretp/lets-do-a-thing-and-call-it-foo"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
             <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/"><i class="far fa-gem"></i></a>
         </div>
@@ -86,10 +87,25 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
-            <div class="talktitle">Whose Test Is It Anyway?</div>
-            <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
+            <div class="talktitle">Testaus muuttuu, muututko sinä? (Testing Changes, Do You?)</div>
+            <div class="talktype">TALK</div> <div class="wherewhenwhere">Prove Webinar, Nov 16th 2022, Online</div>
             <a href="https://app.mural.co/t/maaretp9875/m/maaretp9875/1668540689773/59d9e116c541e3ecc84dc181688dd319f5f73999?sender=maaret6604"><i class="far fa-gem"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Breaking Illusions with Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">German Testing Day, May 3rd & 4th 2021, Online</div>
+            <div class="wherewhenwhere">SLASSCOM Quality and Business Excellence Summit, March 10th 2021, Online</div>
+            <div class="wherewhenwhere">JAX London, October 9th 2019, London, United Kingdom</div>
+            <div class="wherewhenwhere">DDD Europe, January 31st - Feb 1st 2019, Amsterdam, the Netherlands</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">TECH(K)NOW Day, March 8th 2022, Online</div>
+            <div class="wherewhenwhere">Agile Greece Summit, September 20th 2019, Athens, Greece</div>
+            <div class="wherewhenwhere">Conferencia Agile Testers - Brazilian Online Conference, October 28th 2018, Online</div>
+            <a href="https://www.slideshare.net/maaretp/ddd-europe-breaking-illusions-with-testing-keynote?qid=a798845b-91aa-419e-bac4-7facb4164f02&v=&b=&from_search=14"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.youtube.com/watch?v=oQXbs3awemg"><i class="fas fa-video"></i></a>
         </div>
 
 <!--
@@ -98,8 +114,10 @@
             <div class="status">NEW</div>
             <div class="talktitle">Whose Test Is It Anyway?</div>
             <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
+            <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
             <i class="far fa-gem"></i>
+            <i class="fas fa-bars"></i>
         </div>
     -->
 
