Add ET work courses

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -34,7 +34,8 @@
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
             <div class="talktitle">Whose Test Is It Anyway?</div>
-            <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
+            <div class="talktype">KEYNOTE</div> 
+            <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
@@ -45,7 +46,8 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="talktitle">Targeting Errors of Omission</div>
-            <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">Global Testing Retreat, December 9-11th 2022, Online</div>
+            <div class="talktype">KEYNOTE</div> 
+            <div class="wherewhenwhere">Global Testing Retreat, December 9-11th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/atagr-targeting-errors-of-omission"><i class="fab fa-slideshare"></i></a>
             <!--
             <i class="fas fa-video"></i>
@@ -57,8 +59,10 @@
             <div class="timecircle">45 min</div>
             <div class="status">SCHEDULED</div>
             <div class="talktitle">Let's Do a Thing and Call It Foo</div>
-            <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">Testμ Conference, August 23rd 2022, Online</div>
-            <div class="talktype">TALK</div> <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
+            <div class="talktype">KEYNOTE</div> 
+            <div class="wherewhenwhere">Testμ Conference, August 23rd 2022, Online</div>
+            <div class="talktype">TALK</div> 
+            <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">Customer Event, December 8th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">FooConf, February 1st 2023, Helsinki, Finland</div>
             <a href="https://www.slideshare.net/maaretp/lets-do-a-thing-and-call-it-foo"><i class="fab fa-slideshare"></i></a>
@@ -69,17 +73,23 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="talktitle">A Practitioner's Guide to Contemporary Exploratory Testing</div>
-            <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">Axiom Summit Conference, May 14th 2022, Online</div>
-            <div class="talktype">TALK</div> <div class="wherewhenwhere">Customer Event, November 10th 2022, Online</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Axiom Summit Conference, May 14th 2022, Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Customer Event, November 10th 2022, Online</div>
+            <a href="https://www.slideshare.net/maaretp/axiomsummit-2022-a-practitioners-guide-to-contemporary-exploratory-testing"><i class="fab fa-slideshare"></i></a>
+
         </div>
 
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="talktitle">The Automationist's Gambit</div>
-            <div class="talktype">KEYNOTE</div><div class="wherewhenwhere">EuroSTAR 2021, September 30th 2022, Online</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">EuroSTAR 2021, September 30th 2022, Online</div>
             <div class="wherewhenwhere">SANAE Software Testing BEER.EX September 28th 2022, Bratislava, Slovakia</div>
             <div class="wherewhenwhere">Customer Organization, September 29th 2021, Online</div>
-            <div class="talktype">TALK</div><div class="wherewhenwhere">Software Testing Karlsruhe meetup, June 14th 2022, Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Software Testing Karlsruhe meetup, June 14th 2022, Online</div>
             <div class="wherewhenwhere">SQA Point Meetup, October 28th 2021, Online</div>
             <div class="wherewhenwhere">Geekle QA Summit, February 16th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/eurostar-21-keynote-automationists-gambit"><i class="fab fa-slideshare"></i></a>
@@ -88,7 +98,8 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="talktitle">Testaus muuttuu, muututko sinä? (Testing Changes, Do You?)</div>
-            <div class="talktype">TALK</div> <div class="wherewhenwhere">Prove Webinar, Nov 16th 2022, Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Prove Webinar, Nov 16th 2022, Online</div>
             <a href="https://app.mural.co/t/maaretp9875/m/maaretp9875/1668540689773/59d9e116c541e3ecc84dc181688dd319f5f73999?sender=maaret6604"><i class="far fa-gem"></i></a>
         </div>
 
@@ -108,12 +119,53 @@
             <a href="https://www.youtube.com/watch?v=oQXbs3awemg"><i class="fas fa-video"></i></a>
         </div>
 
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Contemporary Exploratory Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Selenium Summit (7.2.2021), Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">CodeMentor (16.6.2022), Online</div>
+            <div class="wherewhenwhere">Test Automation Talks Meetup (5.7.2022), Online</div>
+            <div class="wherewhenwhere">Customer Organization (17.12.2021), Online</div>
+            <div class="wherewhenwhere">Customer Organization (24.11.2021), Online</div>
+            <div class="wherewhenwhere">Breakpoint (24.3.2021), Online</div>
+            <a href="https://www.slideshare.net/maaretp/breakpoint-2021-contemporary-exploratorytesting"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+        <div class="timecircle">1 day</div>
+            <div class="talktitle">Exploratory Testing Work Course</div>
+            <div class="talktype">COURSE</div>
+            <div class="wherewhenwhere">Customer Organization, London, UK (16.1.2019)</div>
+            <div class="wherewhenwhere">Customer Organization, Oulu, Finland 15.8.2018 </div>
+            <div class="wherewhenwhere">Customer Organization, Helsinki, Finland 19.6.2018 </div>
+            <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (13.4.2016)</div>
+            <div class="wherewhenwhere">Ministry of Testing, Brighton, UK (22.10.2015)</div>
+            <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (26.11.2015)</div>
+            <div class="wherewhenwhere">Altom, Helsinki, Finland (6.5.2015)</div>
+        </div>
+
+    <div class="card2">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Exploratory Testing Work Course</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Alma Talent, September 12th & 13th 2022, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Customer Organization, April 19th & 20th 2022, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Alma Talent, May 16th & 27th 2021, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Alma Talent, February 9th and 10th 2021, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Alma Talent, March 18th & 19th, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Alma Talent, September 4th & 5th 2018, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Alma Talent, February 15th & 16th, Helsinki, Finland</div>
+    </div>
+
 <!--
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
             <div class="talktitle">Whose Test Is It Anyway?</div>
-            <div class="talktype">KEYNOTE</div> <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">EuroSTAR 2023, June 15th 2023, Antwerp, Belgium</div>
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
             <i class="far fa-gem"></i>
